...
    label: "Elysia",
    route: "/(tabs)/elysia",
  },
  {
    key: "tracker",
    iconName: "fitness-outline",
    label: "Tracker",
    route: "/(tabs)/tracker",
  },
  {
    key: "products",
    iconName: "storefront-outline",
    label: "Products",
...
